    package.

Non-Compatible and Compatible example format:
==========================================================================================
EDK_0010: Non-Compatible: owner

	  Class_HFile: PPI A of MdePkg has been removed.

		Code Change :
		1) Removed the .h file: MdePkg\Include\Ppi\A.h

		Possible Impacts:
		1) All modules that used this PPI A should be updated.

==========================================================================================
EDK_0000: Compatible: owner

	  Class_BuildTool: with the EDK_0000 build.exe, the build performance is enhanced great.

		Code Change :
		1) BaseTools\Bin\Win32\build.exe

!!!!!!!!!!!!!!!!!!                     End of Notes                     !!!!!!!!!!!!!!!!!!
##########################################################################################

==========================================================================================
EDK_4853: Non-Compatible: qwang12

	  remove the definition of EFI_DISPATCH_OPROM_TABLE from IntelFrameworkPkg\Include\Framework\Legacy16.h 
	  as it is not defined in any Intel Framework spec.

		Possible Impacts:
		1) Modules that may reference this structure.

==========================================================================================
EDK_5216: Non-Compatible: qwang12

	  PI spec defines some definitions that same name with those in Framework Specification.
	  Change those in Framework Specifications by adding "FRAMEWORK_" prefix so that these two
	  header file can be included in the same module (for example a thunk driver).
	  
	  EFI_FV_ATTRIBUTES
	  EFI_FV_GET_ATTRIBUTES
	  EFI_FV_SET_ATTRIBUTES
	  EFI_FV_READ_FILE
	  EFI_FV_READ_SECTION
	  EFI_FV_WRITE_POLICY
	  EFI_FV_UNRELIABLE_WRITE
	  EFI_FV_RELIABLE_WRITE
	  EFI_FV_WRITE_FILE_DATA
	  EFI_FV_WRITE_FILE
	  EFI_FV_GET_NEXT_FILE

		Possible Impacts:
		1) Modules that may reference this definitions need to be updated.