@@ -1,7 +1,8 @@
 /** @file
-  OEM hook status code library functions with no library constructor/destructor
+  OEM hook status code library. Platform can implement an instance to 
+  initialize the OEM devices to report status code information.
 
-  Copyright (c) 2006, Intel Corporation
+  Copyright (c) 2006 - 2009, Intel Corporation
   All rights reserved. This program and the accompanying materials
   are licensed and made available under the terms and conditions of the BSD License
   which accompanies this distribution.  The full text of the license may be found at
